feat(api): add location reports module (#19)
